[package]
name = "b2_api_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [] }
backblaze_b2_async_plain = { git="https://github.com/Tomok/rust_backblaze_b2_api_async_plain.git", rev="v0.0.1", features=["sha1"] }
